# reversi-ai

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  pyproject.toml
reversi_ai/: ffn.py  main.py  train.py
